--- a/README
+++ b/README
@@ -3,17 +3,27 @@
 This is a simple pure-Ruby driver for the 10gen Mongo DB. For more information
 about Mongo, see http://www.mongodb.org.
 
+
 = Demo
 
   $ ruby examples/demo.rb
 
 Mongo must be running, of course.
 
+
 = Testing
 
   $ rake test
 
 The tests assume that the Mongo database is running on the default port.
+
+
+= To Do
+
+* Synchronization.
+
+* More tests.
+
 
 = License
 
