Lots of fixes. - Introduced OrderedHash because db commands require that the command key be   first. - Fixed BSON (de)serialization of object ids. - Simplified @coll.drop_indexes. - Renamed some method parameters to make their type more clear (for example,   "collection" became "collection_name"). - Got the index_information test working.

--- a/README
+++ b/README
@@ -52,6 +52,9 @@ type
 
 = To Do
 
+* Study src/main/ed/db/{dbcollection,dbcursor,db}.js in the Babble code.
+  That's what I should be writing to.
+
 * Capped collection support.
 
 * More code comments. More text in this file.
