--- a/README
+++ b/README
@@ -52,18 +52,11 @@ type
 
 = To Do
 
-* Support more types: REGEX, etc.
-
-* Study src/main/ed/db/{dbcollection,dbcursor,db}.js in the Babble code.
-  That's what I should be writing to.
-
 * Capped collection support.
 
 * More code comments. More text in this file.
 
-* Rake task for rdoc generation.
-
-* Remove default _id generation.
+* Support more types: REF, SYMBOL, CODE_W_SCOPE, etc.
 
 * Introduce optional per-database and per-collection PKInjector.
 
@@ -73,7 +66,8 @@ type
 
 * Implement Admin.
 
-* See FIXME in db test.
+* Study src/main/ed/db/{dbcollection,dbcursor,db}.js and ByteEncoder.java in
+  the Babble code. That's what I should be writing to.
 
 
 = Credits
