--- a/README.rdoc
+++ b/README.rdoc
@@ -54,11 +54,8 @@ type
 
 = To Do
 
-* Add way to ask db if it is master or slave. Mongo needs to add this, first.
-
-* Once Mongo can tell us if an instance is master or slave, add a way to
-  specify a collection of databases on startup (a simple array of IP
-  address/port numbers, perhaps, or a hash or something). The driver would
+* Add a way to specify a collection of databases on startup (a simple array of
+  IP address/port numbers, perhaps, or a hash or something). The driver would
   then find the master and, on each subsequent command, ask that machine if it
   is the master before proceeding.
 
