--- a/README.rdoc
+++ b/README.rdoc
@@ -107,5 +107,5 @@ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
 details.
 
-See http://www.gnu.org/licenses/ for a copy of the GNU Affero General Public
+See http://www.gnu.org/licenses for a copy of the GNU Affero General Public
 License.
