--- a/README.rdoc
+++ b/README.rdoc
@@ -83,10 +83,13 @@ type
 = Credits
 
 Adrian Madrid, aemadrid@gmail.com
+* bin/mongo_console
 * examples/benchmarks.rb
 * examples/irb.rb
 * Modifications to examples/simple.rb
 * Found plenty of bugs and missing features.
+* Ruby 1.9 support.
+* Gem support.
 * Many other code suggestions and improvements.
 
 
