--- a/README.rdoc
+++ b/README.rdoc
@@ -97,7 +97,7 @@ Adrian Madrid, aemadrid@gmail.com
 
 == Mongo Ruby Driver
 
-Copyright (C) 2008 10gen Inc.
+Copyright (C) 2008-2009 10gen Inc.
 
 This program is free software: you can redistribute it and/or modify it under
 the terms of the GNU Affero General Public License, version 3, as published by
