Bug fixes: - Make sure Query#fields returns a hash, not an array. - Fix query limit by passing limit number to cursor and having it enforce the   limit. (Database returns limit as first batch, but will continue to return   data after the limit if requested.) Improvements: - Query#new can take a single field name instead of an array - A few doc comment improvements here and there.

--- a/README.rdoc
+++ b/README.rdoc
@@ -54,6 +54,9 @@ type
 
 = To Do
 
+* Only update message sizes once, not after every write of a value. This will
+  require an explicit call to update_message_length in each message subclass.
+
 * Tests for update and repsert.
 
 * Add a way to specify a collection of databases on startup (a simple array of
