--- a/README.rdoc
+++ b/README.rdoc
@@ -44,6 +44,8 @@ See the git log comments.
 
 = To Do
 
+* Add :publish Rake task, once we get a RubyForge project.
+
 * Only update message sizes once, not after every write of a value. This will
   require an explicit call to update_message_length in each message subclass.
 
